config/objects/ShipmentStop__c.object
<CustomObject>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Stops</relationshipLabel>
        <relationshipName>Shipment_Stops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stop__c</fullName>
        <label>Stop</label>
        <referenceTo>Stop__c</referenceTo>
        <relationshipLabel>Shipment Stops</relationshipLabel>
        <relationshipName>Shipment_Stops</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Shipment Stop</label>
    <nameField>
        <label>Shipment Stop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>